<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/open_order"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="@dimen/dim_xl"
    android:background="@drawable/shape_et"
    android:clickable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:weightSum="10">

    <LinearLayout
        android:id="@+id/order_item"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="9"
        android:orientation="vertical"
        android:background="@color/gray">

        <LinearLayout
            android:id="@+id/pharmacy_info"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_3xl"
           android:layout_marginTop="@dimen/dim_xl"
            android:layout_marginStart="@dimen/dim_xl"
            android:layout_marginEnd="@dimen/dim_xl"
            android:weightSum="10"
            android:orientation="horizontal">


            <com.github.curioustechizen.ago.RelativeTimeTextView
                android:id="@+id/time_news"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="start"
                tools:text="@string/day"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/pharmacy_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:fontFamily="@font/cagliostro"
                android:text="@string/name"
                android:textSize="@dimen/txt_size_s" />


        </LinearLayout>
        <LinearLayout
            android:id="@+id/order_info"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_3xl"
            android:weightSum="10"
            android:layout_marginStart="@dimen/dim_xl"
            android:layout_marginEnd="@dimen/dim_xl"
            android:layout_below="@id/pharmacy_info"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/order_status"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="start"
                tools:text="@string/status"
                android:textColor="@color/red"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/num_of_order"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:fontFamily="@font/cagliostro"
                android:text="@string/orders"
                android:textSize="@dimen/txt_size_s" />

        </LinearLayout>
    </LinearLayout>

        <ImageButton
            android:id="@+id/delete_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/delete"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/ic_action_navigation_close" />


    </LinearLayout>
</RelativeLayout>