<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/crete_round"
            android:textSize="@dimen/dim_4xl"
            android:textStyle="bold"
            android:text="@string/forget_password"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="@dimen/dim_10xl"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_reset_password_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt"
            android:textColorLink="@color/colorAccent"
            android:hint="@string/email"
            android:textColorHint="@color/colorAccent"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:inputType="textEmailAddress"
            android:drawablePadding="@dimen/dim_xl"
            android:layout_marginStart="@dimen/dim_3xl"
            android:layout_marginEnd="@dimen/dim_3xl"
            android:layout_marginTop="@dimen/dim_4xl"/>


        <Button
            android:id="@+id/fragment_forget_password_step1_send_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dim_marg_l"
            android:layout_below="@id/fragment_reset_password_email"
            android:background="@drawable/button_style"
            android:text="@string/send"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_size_l" />

        <ProgressBar
            android:id="@+id/Progress_Bar"
            android:layout_centerInParent="true"
            style="@style/StyleProgressBar"
            android:layout_below="@id/fragment_forget_password_step1_send_code"/>
    </RelativeLayout>

</RelativeLayout>