<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
   android:background="@color/white"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_10xl"
            android:fontFamily="@font/crete_round"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/dim_4xl"
            android:textStyle="bold" />
<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/phone_layout"
    style="@style/text_input"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:errorTextAppearance="@style/error_appearance"
    android:layout_below="@id/txt">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt"
            android:textColorLink="@color/colorAccent"
            android:hint="@string/phone_number"
            android:textColorHint="@color/colorAccent"
            android:textColor="@color/colorAccent"
            android:drawableStart="@drawable/ic_phone_black_24dp"
            android:inputType="textEmailAddress"
            android:drawablePadding="@dimen/dim_xl" />
</com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            style="@style/text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorTextAppearance="@style/error_appearance"
            android:layout_below="@id/phone_layout">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone_layout"
            android:textColorLink="@color/colorAccent"
            android:textColor="@color/colorAccent"
            android:hint="@string/password"
            android:textColorHint="@color/colorAccent"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_lock_black_24dp"
            android:drawablePadding="@dimen/dim_xl" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/fragment_login_forget_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgetpassword"
            android:layout_below="@+id/password_layout"
            android:linksClickable="true"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="@dimen/dim_xl"
            android:layout_marginStart="@dimen/dim_3xl"
            android:clickable="true"/>
        <Button
            android:id="@+id/fragment_login_login"
            android:layout_width="@dimen/dim_15xl"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fragment_login_forget_password"
            android:text="@string/login"
            android:visibility="visible"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/dim_2xl"
            android:background="@drawable/button_style"
            android:drawableEnd="@drawable/login"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            />

        <Button
            android:id="@+id/fragment_login_open_register"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_3xl"
            android:layout_alignParentBottom="true"
            android:textColor="@color/white"
            android:background="@color/colorAccent"
            android:text="@string/register"
            />

        <RelativeLayout
            android:id="@+id/or"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fragment_login_login"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginTop="@dimen/dim_xl" >

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/orText"
                android:layout_marginStart="@dimen/dim_xl"
                android:layout_marginEnd="@dimen/dim_xl"
                android:background="@color/colorAccent" />

            <TextView
                android:id="@+id/orText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/or"
                android:textColor="@color/colorPrimaryDark" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/orText"
                android:layout_marginStart="@dimen/dim_xl"
                android:layout_marginEnd="@dimen/dim_xl"
                android:background="@color/colorAccent" />
        </RelativeLayout>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_xl"
            android:layout_marginBottom="@dimen/dim_xl"
            android:layout_below="@+id/or"
            android:background="@color/colorAccent"
            android:layout_centerInParent="true"/>
        <ProgressBar

            android:id="@+id/ProgressBar"
            android:layout_below="@id/sign_in_button"
            android:layout_marginTop="@dimen/dim_xl"
            style="@style/StyleProgressBar"
             />
    </RelativeLayout>


</RelativeLayout>